--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -12,6 +12,13 @@
 </head>
 <body>
     <section id="contener">
+    
+    <nav id="navbar">
+
+   </nav>
+
+   <!-- --------------chat box-------------->
+        
 
     </section>
 </body>
