--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -12,13 +12,31 @@
 </head>
 <body>
     <section id="contener">
-    
     <nav id="navbar">
-
    </nav>
 
    <!-- --------------chat box-------------->
-        
+     <section id="chatbox">
+      <div id="chat">
+      </div>
+     </section>  
+
+
+
+     <!-- inputbox----------------------->
+
+     <section id="inputbox">
+    <form action="" id="inputchat">
+    <div class="add"><i class="fa-solid fa-paperclip"></i></div>
+    <div id="msginputbox"><input type="text" placeholder="Massgess" id="msginput"><div class="sticky"><i class='bx bx-sticker' ></i></div> </div>
+    <button type="submit" class="send"><i class="fa-solid fa-paper-plane"></i></button>
+    <div class="mic"><i class='bx bx-microphone'></i></div>
+
+
+</form>
+
+     </section>
+
 
     </section>
 </body>
