--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-<title>U N V O | </title>
-    <link rel="stylesheet" href="/static/css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>U N V O | </title>
+  <link rel="stylesheet" href="/static/css/main.css">
 
 </head>
-<body>
-    <section id="contener">
-    <nav id="navbar">
-   </nav>
 
-   <!-- --------------chat box-------------->
-     <section id="chatbox">
+<body>
+  <section id="contener">
+    <nav id="navbar">
+    </nav>
+
+    <!-- --------------chat box-------------->
+    <section id="chatbox">
       <div id="chat">
 
         <div class="msgleft"> <code id="msg">hii</code></div>
@@ -26,28 +30,34 @@
         <div class="msgleft"> <code id="msg">swagat</code></div>
 
 
-        
+
       </div>
-     </section>  
+    </section>
 
 
 
-     <!-- inputbox----------------------->
+    <!-- inputbox----------------------->
 
-     <section id="inputbox">
+    <section id="inputbox">
 
-    <form action="" id="inputchat">
+      <form action="" id="inputchat">
 
-    <div class="add"><i class="fa-solid fa-paperclip"></i></div>
+        <div class="add"><i class="fa-solid fa-paperclip"></i></div>
 
-    <div id="msginputbox"><input type="text" placeholder="Massgess"  id="msginput"><div class="sticky"><i class='bx bx-sticker' ></i></div> </div>
-    <button type="submit" class="send"><i class="fa-solid fa-paper-plane"></i></button>
-    <div class="mic"><i class='bx bx-microphone'></i></div>
-    </form>
+          <div id="msginputbox">
+          <input type="text" placeholder="Massgess" id="msginput">
 
-     </section>
+          <div class="sticky"><i class='bx bx-sticker'></i></div>
+        </div>
 
+        <button type="submit" class="send"><i class="fa-solid fa-paper-plane"></i></button>
+        <div class="mic"><i class='bx bx-microphone'></i></div>
+      </form>
 
     </section>
+
+
+  </section>
 </body>
+
 </html>
