--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -9,8 +9,10 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <title>U N V O | </title>
   <link rel="stylesheet" href="/static/css/main.css">
+  <link rel="stylesheet" href="/static/css/media.css">
+  <title>U N V O | </title>
+
 
 </head>
 
@@ -28,6 +30,11 @@
         <div class="msgleft"> <code id="msg">samsun</code></div>
         <div class="msgrigt"><code id="msg">i apd 14 pro max</code></div>
         <div class="msgleft"> <code id="msg">swagat</code></div>
+        <div class="msgleft"> <code id="msg">hii</code></div>
+        <div class="msgrigt"><code id="msg">helo</code></div>
+        <div class="msgleft"> <code id="msg">samsun</code></div>
+        <div class="msgrigt"><code id="msg">i apd 14 pro max</code></div>
+        <div class="msgleft"> <code id="msg">swagat</code></div>
 
 
 
@@ -40,7 +47,7 @@
 
     <section id="inputbox">
 
-      <form action="" id="inputchat">
+      <form action="" id="inpuform">
 
         <div class="add"><i class="fa-solid fa-paperclip"></i></div>
 
