--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -30,11 +30,15 @@
         <div class="msgleft"> <code id="msg">samsun</code></div>
         <div class="msgrigt"><code id="msg">i apd 14 pro max</code></div>
         <div class="msgleft"> <code id="msg">swagat</code></div>
-        <div class="msgleft"> <code id="msg">hii</code></div>
-        <div class="msgrigt"><code id="msg">helo</code></div>
-        <div class="msgleft"> <code id="msg">samsun</code></div>
-        <div class="msgrigt"><code id="msg">i apd 14 pro max</code></div>
-        <div class="msgleft"> <code id="msg">swagat</code></div>
+        <div class="msgrigt"><code id="msg">binaya hota</code></div>
+        <div class="msgleft"> <code id="msg">dilka dariya</code></div>
+        <div class="msgrigt"><code id="msg">mere mehebub</code></div>
+        <div class="msgleft"> <code id="msg">kayamata ho gi</code></div>
+        <div class="msgrigt"><code id="msg">binaya hota</code></div>
+        <div class="msgleft"> <code id="msg">dilka dariya</code></div>
+        <div class="msgrigt"><code id="msg">mere mehebub</code></div>
+        <div class="msgleft"> <code id="msg">kayamata ho gi</code></div>
+        
 
 
 
