--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -51,24 +51,17 @@
 
     <section id="inputbox">
 
-      <form action="" id="inpuform">
-
-        <div class="add"><i class="fa-solid fa-paperclip"></i></div>
-
-          <div id="msginputbox">
-          <input type="text" placeholder="Massgess" id="msginput">
-
-          <div class="sticky"><i class='bx bx-sticker'></i></div>
-        </div>
-
-        <button type="submit" class="send"><i class="fa-solid fa-paper-plane"></i></button>
-        <div class="mic"><i class='bx bx-microphone'></i></div>
-      </form>
+    <form action="" id="inpuform">
+    <div class="add"><i class="fa-solid fa-paperclip"></i></div>
+    <div id="msginputbox"> <input type="text" placeholder="Massgess" id="msginput"><div class="sticky"><i class='bx bx-sticker'></i></div></div>
+    <button type="submit" class="send"><i class="fa-solid fa-paper-plane"></i></button>
+    <div class="mic"><i class='bx bx-microphone'></i></div>
+    </form>
 
     </section>
 
 
   </section>
-</body>
+  </body>
 
 </html>
