--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -18,7 +18,10 @@
 
 <body>
   <section id="contener">
+
+    <!----------------------------- navbar------------------->
     <nav id="navbar">
+      
     </nav>
 
     <!-- --------------chat box-------------->
