--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -21,30 +21,16 @@
 
     <!----------------------------- navbar------------------->
     <nav id="navbar">
-      
+
     </nav>
 
     <!-- --------------chat box-------------->
     <section id="chatbox">
       <div id="chat">
 
-        <div class="msgleft"> <code id="msg">hii</code></div>
-        <div class="msgrigt"><code id="msg">helo</code></div>
-        <div class="msgleft"> <code id="msg">samsun</code></div>
-        <div class="msgrigt"><code id="msg">i apd 14 pro max</code></div>
-        <div class="msgleft"> <code id="msg">swagat</code></div>
-        <div class="msgrigt"><code id="msg">binaya hota</code></div>
-        <div class="msgleft"> <code id="msg">dilka dariya</code></div>
-        <div class="msgrigt"><code id="msg">mere mehebub</code></div>
-        <div class="msgleft"> <code id="msg">kayamata ho gi</code></div>
-        <div class="msgrigt"><code id="msg">binaya hota</code></div>
-        <div class="msgleft"> <code id="msg">dilka dariya</code></div>
-        <div class="msgrigt"><code id="msg">mere mehebub</code></div>
-        <div class="msgleft"> <code id="msg">kayamata ho gi</code></div>
+        <div class="msgleft"> <div id="msg">hii</div></div>
+        <div class="msgrigt"><div id="msg">helo</div></div>
         
-
-
-
       </div>
     </section>
 
