--- a/frontend works/index.html
+++ b/frontend works/index.html
@@ -42,7 +42,7 @@
 
     <form action="" id="inpuform">
     <div class="add"><i class="fa-solid fa-paperclip"></i></div>
-    <div id="msginputbox"> <input type="text" placeholder="Massgess" id="msginput"><div class="sticky"><i class='bx bx-sticker'></i></div></div>
+    <div id="msginputbox"> <input type="text" placeholder="Message" id="msginput"><div class="sticky"><i class='bx bx-sticker'></i></div></div>
     <button type="submit" class="send"><i class="fa-solid fa-paper-plane"></i></button>
     <div class="mic"><i class='bx bx-microphone'></i></div>
     </form>
